...
    // holds the deleted players num
    var deletedPlayerNum: Int = 0
    // holds if a player was recently deleted
    var recentlyDeleted: Bool = false
    
    // Array of all position names for the picker wheel
    let positionNames:[String] = [String] (arrayLiteral: "Point-Guard", "Shooting-Guard", "Small-Forward", "Center", "Power-Forward")
    // Array of all height names for the picker wheel
    let heights:[String] = [String] (arrayLiteral: "5'0\"","5'1\"","5'2\"","5'3\"","5'4\"","5'5\"","5'6\"","5'7\"","5'8\"","5'9\"","5'10\"","5'11\"","6'0\"","6'1\"","6'2\"","6'3\"","6'4\"","6'5\"","6'6\"","6'7\"","6'8\"","6'9\"","6'10\"","6'11\"","7'0\"","7'1\"","7'2\"")
    //   let cellNames:[String] = [String] (arrayLiteral: "points","assists","steals","2pg","fg","drebound","3pg","ft%","deflections","orebound","ftmade","blocks","pfoul","tfoul","charge")
    // Array of all class rank names for the picker wheel
    let ranks:[String] = [String] (arrayLiteral: "Freshmen","Sophomore","Junior","Senior")
    
    // MARK: Functions
    override func viewDidLoad() {
        super.viewDidLoad()
        
        // setup the tableView for the different players
...
        chargeCell.text = String(0)
        
    }
    
    // Sets all player fields to default
    func defaultAllFields(){
        playerFirstNameText.text = "First"
        playerLastNameText.text = "Last"
        playerHeightText.text = "Height"
        playerWeightText.text = "Weight"
        playerClassText.text = "Rank"
        playerImage.image = UIImage(named: "Default")
        playerPositionText.text = "Position"
        
        defaultStats()
    }
    
    // Display players info
    func grabPlayerFields(){
...
    }
    
    // Creates the toolbar for the pickers
    func createToolbar(){
        let toolbar = UIToolbar()
        toolbar.sizeToFit()
        let doneButton = UIBarButtonItem(title:"Done", style: .done, target: self, action: #selector(PlayerManagerViewController.dismissKeyboard))
        
        toolbar.setItems([doneButton], animated: false)
        toolbar.isUserInteractionEnabled = true
        
        playerPositionText.inputAccessoryView = toolbar
        playerHeightText.inputAccessoryView = toolbar
...
        }
        alertController.addTextField{ (textFieldTO : UITextField!) -> Void in
            textFieldTO.placeholder = "Target Max No. TO"
            textFieldTO.text = to
        }
        //create save action and add the button to the alert controller
        let saveAction = UIAlertAction(title: "Save", style: .default, handler: { alert -> Void in
            //get pointers to all 4 text fields in the alert controller window
            let textFT = alertController.textFields![0] as UITextField
            let textFG = alertController.textFields![1] as UITextField
            let textRB = alertController.textFields![2] as UITextField
            let textTO = alertController.textFields![3] as UITextField
            //create a dictionary of all 4 fields and their values (values are pulled from the text properties of the text field pointers
...
