...
                            <constraint firstItem="TGY-tB-Qlf" firstAttribute="leading" secondItem="TMd-NM-ULQ" secondAttribute="leading" constant="20" id="dhc-4B-xL7"/>
                            <constraint firstItem="TGY-tB-Qlf" firstAttribute="top" secondItem="TMd-NM-ULQ" secondAttribute="top" constant="13" id="fMw-aO-RQR"/>
                            <constraint firstItem="TMd-NM-ULQ" firstAttribute="bottom" secondItem="0bl-vP-AAi" secondAttribute="bottom" id="xAE-EK-KSR"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="TMd-NM-ULQ"/>
                    </view>
                    <navigationItem key="navigationItem" title="Team Player Manager" id="3qd-6r-nzJ">
                        <leftBarButtonItems>
                            <barButtonItem systemItem="add" id="rnD-qo-E1z">
                                <connections>
                                    <action selector="addPlayer:" destination="wie-Xy-O0x" id="Os4-zX-04P"/>
                                </connections>
                            </barButtonItem>
...
